// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the screens in Arabic > the first sign-in 1`] = `
<div
  class="mt mt-widget mt-rtl"
>
  <article
    aria-label="مرحبا بك في MathTrail"
  >
    <header
      class="mt-head"
    >
      <svg
        aria-hidden="true"
        class="mt-icon"
        height="32"
        viewBox="0 0 32 32"
        width="32"
      />
      <div
        class="mt-head-text"
      >
        <div
          class="mt-head-line"
        >
          <span
            class="mt-name"
          >
            MathTrail
          </span>
        </div>
      </div>
    </header>
    <div
      class="mt-body"
    >
      <p
        class="mt-lead"
      >
        يقدم MathTrail للأطفال في الصفوف من 1 إلى 6 مسائل رياضيات بأسلوب الأولمبياد، هنا في الدردشة مباشرة، ويشرح كل خطأ. يتولى إعداده شخص بالغ: أحد الوالدين أو معلم.
      </p>
      <div
        class="mt-note mt-note-plain"
      >
        <div
          class="mt-note-label"
        >
          <span>
            اسم مستعار
          </span>
        </div>
        <p>
          لا يستخدم للطفل إلا اسم مستعار: لا اسم حقيقي أبدا، ولا تاريخ ميلاد، ولا مدرسة.
        </p>
      </div>
      <div
        class="mt-note mt-note-plain"
      >
        <div
          class="mt-note-label"
        >
          <span>
            ما ستسأل عنه الدردشة
          </span>
        </div>
        <p>
          اسم مستعار والصف، من 1 إلى 6. وإن رغبت، أيضا اهتمامات الطفل، وما لم تتناوله المدرسة بعد، ولغة البطاقات.
        </p>
      </div>
      <div
        class="mt-note mt-note-plain"
      >
        <div
          class="mt-note-label"
        >
          <span>
            مكان حفظ البيانات
          </span>
        </div>
        <p>
          في ملف واحد على Google Drive الخاص بك، يمكنك فتحه أو تنزيله أو حذفه. لا يحتفظ MathTrail بأي شيء لديه.
        </p>
      </div>
    </div>
  </article>
  <div
    class="mt-foot"
  >
    <label
      class="mt-check"
    >
      <input
        type="checkbox"
      />
      <span>
        أتولى تربية الطفل أو تدريسه
      </span>
    </label>
    <div
      class="mt-btns"
    >
      <button
        class="mt-btn mt-btn-primary"
        disabled=""
        type="button"
      >
        إنشاء ملف شخصي
      </button>
    </div>
    <p
      aria-live="polite"
      class="mt-action-note"
    >
      
    </p>
  </div>
</div>
`;

exports[`the screens in Arabic > the profile, its cards chosen to be in Arabic 1`] = `
<div
  class="mt mt-widget mt-rtl"
>
  <article
    aria-label="الملف الشخصي"
  >
    <header
      class="mt-head"
    >
      <svg
        aria-hidden="true"
        class="mt-icon"
        height="32"
        viewBox="0 0 24 24"
        width="32"
      />
      <div
        class="mt-head-text"
      >
        <div
          class="mt-head-line"
        >
          <span
            class="mt-name"
          >
            Comet
          </span>
        </div>
        <span
          class="mt-badge"
        >
          الصف 3
        </span>
      </div>
    </header>
    <div
      class="mt-progress"
    >
      <section
        class="mt-fields"
      >
        <h3
          class="mt-section-label"
        >
          الملف الشخصي · لولي الأمر
        </h3>
        <dl>
          <div>
            <dt>
              الصف
            </dt>
            <dd>
              3
            </dd>
            <dd
              class="mt-field-note"
            >
              مجرد تسمية: تغييره لا يؤثر في أي تصنيف.
            </dd>
          </div>
          <div>
            <dt>
              الاهتمامات
            </dt>
            <dd>
              space وanimals وfootball
            </dd>
          </div>
          <div>
            <dt>
              ما لم تتناوله المدرسة بعد
            </dt>
            <dd>
              القسمة مع الباقي
            </dd>
          </div>
          <div>
            <dt>
              لغة البطاقات
            </dt>
            <dd>
              العربية
            </dd>
          </div>
        </dl>
        <div
          class="mt-fields-actions"
        >
          <button
            class="mt-btn"
            type="button"
          >
            تعديل الملف الشخصي
          </button>
          <p
            aria-live="polite"
            class="mt-action-note"
          >
            
          </p>
        </div>
      </section>
      <section
        class="mt-fields"
      >
        <h3
          class="mt-section-label"
        >
          بياناتك
        </h3>
        <dl>
          <div>
            <dt>
              التصدير
            </dt>
            <dd>
              الملف الشخصي كله محفوظ في ملف واحد على Google Drive الخاص بك: mathtrail-profile.json، في المجلد MathTrail. يمكنك تنزيله أو نسخه من هناك، ويمكن أن تعطيك الدردشة رابطه.
            </dd>
            <dd
              class="mt-field-note"
            >
              ملفات أخرى تحتوي على ملف شخصي: mathtrail-profile (1).json. يقرأ MathTrail أحدثها فقط، ويمكنك حذف الباقي.
            </dd>
          </div>
          <div>
            <dt>
              الحذف
            </dt>
            <dd>
              بحذف الملف وإفراغ سلة المهملات في Drive، لا يبقى أي شيء من الملف الشخصي في أي مكان.
            </dd>
          </div>
          <div>
            <dt>
              إلغاء الوصول
            </dt>
            <dd>
              في حساب Google، ضمن التطبيقات التابعة لجهات خارجية التي لها حق الوصول، يمكن إزالة MathTrail، وبعدها لن يصل إلى أي شيء.
            </dd>
          </div>
          <div>
            <dt>
              إزالة التطبيق
            </dt>
            <dd>
              يمكن فصل MathTrail من إعدادات الدردشة نفسها.
            </dd>
          </div>
        </dl>
      </section>
    </div>
  </article>
</div>
`;

exports[`the screens in Arabic > the progress 1`] = `
<div
  class="mt mt-widget mt-rtl"
>
  <article
    aria-label="الملف الشخصي والتقدم"
  >
    <header
      class="mt-head"
    >
      <svg
        aria-hidden="true"
        class="mt-icon"
        height="32"
        viewBox="0 0 24 24"
        width="32"
      />
      <div
        class="mt-head-text"
      >
        <div
          class="mt-head-line"
        >
          <span
            class="mt-name"
          >
            Comet
          </span>
        </div>
        <span
          class="mt-badge"
        >
          الصف 3
        </span>
      </div>
    </header>
    <div
      class="mt-progress"
    >
      <section
        aria-label="التصنيف العام"
        class="mt-rating"
      >
        <span
          class="mt-rating-rank"
        >
          المرحلة 3 من 11 · معبر النهر
        </span>
        <div
          class="mt-rating-line"
        >
          <span
            class="mt-rating-num"
          >
            1573
          </span>
          <span
            class="mt-meta"
          >
            التصنيف العام
          </span>
        </div>
        <div
          aria-hidden="true"
          class="mt-pips"
        >
          <span
            class="mt-pip"
            data-on="true"
          />
          <span
            class="mt-pip"
            data-on="true"
          />
          <span
            class="mt-pip"
            data-on="true"
          />
          <span
            class="mt-pip"
            data-on="false"
          />
          <span
            class="mt-pip"
            data-on="false"
          />
          <span
            class="mt-pip"
            data-on="false"
          />
          <span
            class="mt-pip"
            data-on="false"
          />
          <span
            class="mt-pip"
            data-on="false"
          />
          <span
            class="mt-pip"
            data-on="false"
          />
          <span
            class="mt-pip"
            data-on="false"
          />
          <span
            class="mt-pip"
            data-on="false"
          />
        </div>
      </section>
      <div
        class="mt-note mt-note-plain"
      >
        <div
          class="mt-note-label"
        >
          <span>
            الموضوع التالي
          </span>
        </div>
        <p>
          حصر الحالات، مرة أخرى
        </p>
      </div>
      <section
        class="mt-list"
      >
        <h3
          class="mt-section-label"
        >
          المواضيع
        </h3>
        <ul>
          <li
            class="mt-row"
          >
            <span
              class="mt-row-label"
            >
              الترتيب
            </span>
            <span
              class="mt-row-spacer"
            />
            <span
              class="mt-status mt-status-correct"
            >
              <svg
                aria-hidden="true"
                class="mt-icon"
                fill="none"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
              تم إتقانه
            </span>
            <span
              class="mt-row-value"
            >
              1712
            </span>
          </li>
          <li
            class="mt-row"
          >
            <span
              class="mt-row-label"
            >
              حصر الحالات
            </span>
            <span
              class="mt-row-spacer"
            />
            <span
              class="mt-row-value"
            >
              1627
            </span>
          </li>
          <li
            class="mt-row"
          >
            <span
              class="mt-row-label"
            >
              الفواصل والحدود
            </span>
            <span
              class="mt-row-spacer"
            />
            <span
              class="mt-row-value"
            >
              1588
            </span>
          </li>
          <li
            class="mt-row"
          >
            <span
              class="mt-row-label"
            >
              الزوجية والتناوب
            </span>
            <span
              class="mt-row-spacer"
            />
            <span
              class="mt-row-value"
            >
              1541
            </span>
          </li>
        </ul>
      </section>
      <section
        class="mt-list"
      >
        <h3
          class="mt-section-label"
        >
          آخر الإجابات
        </h3>
        <ul>
          <li
            class="mt-row"
          >
            <span
              class="mt-row-label"
            >
              حصر الحالات
            </span>
            <span
              class="mt-row-spacer"
            />
            <span
              class="mt-status mt-status-wrong"
            >
              <svg
                aria-hidden="true"
                class="mt-icon"
                fill="none"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
              خطأ
            </span>
          </li>
          <li
            class="mt-row"
          >
            <span
              class="mt-row-label"
            >
              حصر الحالات
            </span>
            <span
              class="mt-row-spacer"
            />
            <span
              class="mt-status mt-status-skipped"
            >
              <svg
                aria-hidden="true"
                class="mt-icon"
                fill="none"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
              تم التخطي
            </span>
          </li>
          <li
            class="mt-row"
          >
            <span
              class="mt-row-label"
            >
              الفواصل والحدود
            </span>
            <span
              class="mt-row-spacer"
            />
            <span
              class="mt-status mt-status-correct"
            >
              <svg
                aria-hidden="true"
                class="mt-icon"
                fill="none"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
              صحيح
            </span>
          </li>
          <li
            class="mt-row"
          >
            <span
              class="mt-row-label"
            >
              الترتيب
            </span>
            <span
              class="mt-row-spacer"
            />
            <span
              class="mt-status mt-status-correct"
            >
              <svg
                aria-hidden="true"
                class="mt-icon"
                fill="none"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
              صحيح
            </span>
          </li>
          <li
            class="mt-row"
          >
            <span
              class="mt-row-label"
            >
              الزوجية والتناوب
            </span>
            <span
              class="mt-row-spacer"
            />
            <span
              class="mt-status mt-status-wrong"
            >
              <svg
                aria-hidden="true"
                class="mt-icon"
                fill="none"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              />
              خطأ
            </span>
          </li>
        </ul>
        <p
          class="mt-list-note"
        >
          في المجموع، 1 مسألة بلا إجابة.
        </p>
      </section>
      <section
        class="mt-list"
      >
        <h3
          class="mt-section-label"
        >
          أخطاء متكررة
        </h3>
        <ul>
          <li
            class="mt-row mt-row-bar"
          >
            <div
              class="mt-row-bar-top"
            >
              <span
                class="mt-row-label"
              >
                إغفال حالة أثناء الحصر
              </span>
              <span
                class="mt-row-spacer"
              />
              <span
                class="mt-row-count"
              >
                3 مرات
              </span>
            </div>
            <svg
              aria-hidden="true"
              class="mt-bar-chart"
              height="4"
              width="100%"
            />
          </li>
          <li
            class="mt-row mt-row-bar"
          >
            <div
              class="mt-row-bar-top"
            >
              <span
                class="mt-row-label"
              >
                حساب الشيء نفسه مرتين
              </span>
              <span
                class="mt-row-spacer"
              />
              <span
                class="mt-row-count"
              >
                2 مرتان
              </span>
            </div>
            <svg
              aria-hidden="true"
              class="mt-bar-chart"
              height="4"
              width="100%"
            />
          </li>
        </ul>
      </section>
      <section
        class="mt-fields"
      >
        <h3
          class="mt-section-label"
        >
          الملف الشخصي · لولي الأمر
        </h3>
        <dl>
          <div>
            <dt>
              الصف
            </dt>
            <dd>
              3
            </dd>
            <dd
              class="mt-field-note"
            >
              مجرد تسمية: تغييره لا يؤثر في أي تصنيف.
            </dd>
          </div>
          <div>
            <dt>
              الاهتمامات
            </dt>
            <dd>
              space وanimals وfootball
            </dd>
          </div>
          <div>
            <dt>
              ما لم تتناوله المدرسة بعد
            </dt>
            <dd>
              القسمة مع الباقي
            </dd>
          </div>
          <div>
            <dt>
              لغة البطاقات
            </dt>
            <dd>
              لغة الدردشة
            </dd>
          </div>
        </dl>
        <div
          class="mt-fields-actions"
        >
          <button
            class="mt-btn"
            type="button"
          >
            تعديل الملف الشخصي
          </button>
          <p
            aria-live="polite"
            class="mt-action-note"
          >
            
          </p>
        </div>
      </section>
    </div>
  </article>
</div>
`;

exports[`the screens in Arabic > the result of a wrong answer 1`] = `
<div
  class="mt mt-widget mt-rtl"
>
  <div>
    <button
      class="mt-bar"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="mt-icon"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      />
      <span
        class="mt-bar-name"
      >
        مذنّب
      </span>
       
      <span
        class="mt-bar-action"
      >
        الملف الشخصي والتقدم
      </span>
      <svg
        aria-hidden="true"
        class="mt-icon mt-chevron"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      />
    </button>
    <article
      aria-label="مسألة"
    >
      <header
        class="mt-head"
      >
        <svg
          aria-hidden="true"
          class="mt-icon"
          height="32"
          viewBox="0 0 32 32"
          width="32"
        />
        <div
          class="mt-head-text"
        >
          <div
            class="mt-head-line"
          >
            <span
              class="mt-name"
            >
              MathTrail
            </span>
          </div>
          <span
            class="mt-badge"
          >
            مدرب الأولمبياد · الصف 3
          </span>
        </div>
      </header>
      <div
        class="mt-body"
      >
        <p
          class="mt-task-text"
          dir="rtl"
          lang="ar"
        >
          طول السياج 12 مترًا. تقف الأعمدة كل 3 أمتار، ومنها عمودان عند الطرفين. كم عدد الأعمدة؟
        </p>
        <pre
          aria-label="الرسم"
          class="mt-diagram"
          dir="ltr"
          role="img"
          tabindex="0"
        >
          |--3--|--3--|--3--|--3--|
        </pre>
        <fieldset
          class="mt-options"
        >
          <legend>
            الإجابات
          </legend>
          <div
            class="mt-options-list"
          >
            <button
              aria-disabled="true"
              class="mt-option"
              data-state="muted"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                A
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                3
              </span>
            </button>
            <button
              aria-disabled="true"
              class="mt-option"
              data-state="wrong"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                B
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                4
              </span>
               
              <span
                class="mt-option-status"
              >
                <svg
                  aria-hidden="true"
                  class="mt-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                />
                إجابتك
              </span>
            </button>
            <button
              aria-disabled="true"
              class="mt-option"
              data-state="correct"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                C
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                5
              </span>
               
              <span
                class="mt-option-status"
              >
                <svg
                  aria-hidden="true"
                  class="mt-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                />
                الإجابة الصحيحة
              </span>
            </button>
            <button
              aria-disabled="true"
              class="mt-option"
              data-state="muted"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                D
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                6
              </span>
            </button>
            <button
              aria-disabled="true"
              class="mt-option"
              data-state="muted"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                E
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                12
              </span>
            </button>
          </div>
        </fieldset>
      </div>
    </article>
    <section
      aria-label="الردود"
      aria-live="polite"
      class="mt-replies"
    >
      <div
        tabindex="-1"
      >
        <article
          class="mt-reply"
        >
          <header
            class="mt-head mt-head-compact"
          >
            <svg
              aria-hidden="true"
              class="mt-icon"
              height="28"
              viewBox="0 0 32 32"
              width="28"
            />
            <div
              class="mt-head-text"
            >
              <span
                class="mt-name"
              >
                MathTrail
              </span>
            </div>
          </header>
          <div
            class="mt-reply-body"
          >
            <p
              class="mt-verdict-line"
            >
              <svg
                aria-hidden="true"
                class="mt-icon"
                fill="none"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              />
              <span>
                ليس تماما: الإجابة هي 5 وليست 4.
              </span>
            </p>
            <div
              class="mt-note mt-note-trap"
            >
              <div
                class="mt-note-label"
              >
                <svg
                  aria-hidden="true"
                  class="mt-icon"
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                />
                <span>
                  الفخ
                </span>
              </div>
              <p
                dir="rtl"
                lang="ar"
              >
                عُدّت المسافات بدلًا من الأعمدة.
              </p>
            </div>
            <div
              class="mt-steps"
            >
              <h3
                class="mt-section-label"
              >
                الحل
              </h3>
              <ol
                dir="rtl"
                lang="ar"
              >
                <li>
                  <span
                    class="mt-step-num"
                  >
                    1
                  </span>
                   
                  <span>
                    12 ÷ 3 = 4 مسافات.
                  </span>
                </li>
                <li>
                  <span
                    class="mt-step-num"
                  >
                    2
                  </span>
                   
                  <span>
                    في السياج المستقيم الذي تقف أعمدته عند طرفيه يزيد عدد الأعمدة على عدد المسافات بواحد.
                  </span>
                </li>
                <li>
                  <span
                    class="mt-step-num"
                  >
                    3
                  </span>
                   
                  <span>
                    4 + 1 = 5 أعمدة.
                  </span>
                </li>
              </ol>
            </div>
            <div
              class="mt-note mt-note-plain"
            >
              <div
                class="mt-note-label"
              >
                <span>
                  التصنيف في هذا الموضوع
                </span>
              </div>
              <p>
                1502 ← 1480
              </p>
            </div>
          </div>
        </article>
      </div>
    </section>
    <div
      class="mt-foot"
    >
      <div
        class="mt-field"
      >
        <label
          class="mt-vh"
          for="P0-0"
        >
          سؤال عن المسألة
        </label>
        <input
          id="P0-0"
          placeholder="سؤالك عن المسألة…"
          type="text"
        />
        <button
          aria-label="إرسال"
          class="mt-icon-btn"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="mt-icon mt-send"
            fill="none"
            height="18"
            viewBox="0 0 16 16"
            width="18"
          />
        </button>
      </div>
      <div
        class="mt-btns"
      >
        <button
          class="mt-btn mt-btn-primary"
          type="button"
        >
          مسألة أخرى
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`the screens in Arabic > the task 1`] = `
<div
  class="mt mt-widget mt-rtl"
>
  <div>
    <button
      class="mt-bar"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="mt-icon"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      />
      <span
        class="mt-bar-name"
      >
        مذنّب
      </span>
       
      <span
        class="mt-bar-action"
      >
        الملف الشخصي والتقدم
      </span>
      <svg
        aria-hidden="true"
        class="mt-icon mt-chevron"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      />
    </button>
    <article
      aria-label="مسألة"
    >
      <header
        class="mt-head"
      >
        <svg
          aria-hidden="true"
          class="mt-icon"
          height="32"
          viewBox="0 0 32 32"
          width="32"
        />
        <div
          class="mt-head-text"
        >
          <div
            class="mt-head-line"
          >
            <span
              class="mt-name"
            >
              MathTrail
            </span>
          </div>
          <span
            class="mt-badge"
          >
            مدرب الأولمبياد · الصف 3
          </span>
        </div>
      </header>
      <div
        class="mt-body"
      >
        <p
          class="mt-task-text"
          dir="rtl"
          lang="ar"
        >
          طول السياج 12 مترًا. تقف الأعمدة كل 3 أمتار، ومنها عمودان عند الطرفين. كم عدد الأعمدة؟
        </p>
        <pre
          aria-label="الرسم"
          class="mt-diagram"
          dir="ltr"
          role="img"
          tabindex="0"
        >
          |--3--|--3--|--3--|--3--|
        </pre>
        <fieldset
          class="mt-options"
        >
          <legend>
            ما الإجابة الصحيحة؟
          </legend>
          <div
            class="mt-options-list"
          >
            <button
              class="mt-option"
              data-state="default"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                A
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                3
              </span>
            </button>
            <button
              class="mt-option"
              data-state="default"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                B
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                4
              </span>
            </button>
            <button
              class="mt-option"
              data-state="default"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                C
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                5
              </span>
            </button>
            <button
              class="mt-option"
              data-state="default"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                D
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                6
              </span>
            </button>
            <button
              class="mt-option"
              data-state="default"
              type="button"
            >
              <span
                class="mt-option-letter"
              >
                E
              </span>
               
              <span
                class="mt-option-value"
                dir="rtl"
                lang="ar"
              >
                12
              </span>
            </button>
          </div>
        </fieldset>
      </div>
    </article>
    <section
      aria-label="الردود"
      aria-live="polite"
      class="mt-replies"
    />
    <div
      class="mt-foot"
    >
      <div
        class="mt-field"
      >
        <label
          class="mt-vh"
          for="P0-0"
        >
          سؤال عن المسألة
        </label>
        <input
          id="P0-0"
          placeholder="سؤالك عن المسألة…"
          type="text"
        />
        <button
          aria-label="إرسال"
          class="mt-icon-btn"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="mt-icon mt-send"
            fill="none"
            height="18"
            viewBox="0 0 16 16"
            width="18"
          />
        </button>
      </div>
      <div
        class="mt-btns"
      >
        <button
          class="mt-btn"
          type="button"
        >
          لا أعرف
        </button>
        <button
          aria-expanded="false"
          class="mt-btn"
          type="button"
        >
          تلميح
        </button>
        <button
          class="mt-btn"
          type="button"
        >
          مسألة أخرى
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`the screens in Arabic > the wait for the next task 1`] = `
<div
  class="mt mt-widget mt-rtl"
>
  <div>
    <button
      class="mt-bar"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="mt-icon"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      />
      <span
        class="mt-bar-name"
      >
        مذنّب
      </span>
       
      <span
        class="mt-bar-action"
      >
        الملف الشخصي والتقدم
      </span>
      <svg
        aria-hidden="true"
        class="mt-icon mt-chevron"
        fill="none"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      />
    </button>
    <article
      aria-label="المسألة التالية"
    >
      <header
        class="mt-head"
      >
        <svg
          aria-hidden="true"
          class="mt-icon"
          height="32"
          viewBox="0 0 32 32"
          width="32"
        />
        <div
          class="mt-head-text"
        >
          <div
            class="mt-head-line"
          >
            <span
              class="mt-name"
            >
              MathTrail
            </span>
          </div>
          <span
            class="mt-badge"
          >
            مدرب الأولمبياد · الصف 3
          </span>
        </div>
      </header>
      <div
        class="mt-body"
      >
        <div
          class="mt-wait"
        >
          <div
            class="mt-gen"
          >
            <p
              class="mt-gen-title"
              tabindex="-1"
            >
              جار إعداد المسألة التالية…
            </p>
            <ol
              aria-live="polite"
            >
              <li
                data-status="active"
              >
                <span
                  class="mt-gen-icon"
                >
                  <span
                    class="mt-gen-turning"
                  >
                    <svg
                      aria-hidden="true"
                      class="mt-icon mt-spin"
                      fill="none"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    />
                  </span>
                </span>
                <span
                  class="mt-gen-label"
                >
                  <span
                    class="mt-vh"
                  >
                    قيد التنفيذ:
                     
                  </span>
                  تم اختيار الموضوع ومستوى الصعوبة
                </span>
              </li>
              <li
                data-status="waiting"
              >
                <span
                  class="mt-gen-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="mt-icon"
                    fill="none"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  />
                </span>
                <span
                  class="mt-gen-label"
                >
                  <span
                    class="mt-vh"
                  >
                    في الانتظار:
                     
                  </span>
                  كتابة المسألة
                </span>
              </li>
              <li
                data-status="waiting"
              >
                <span
                  class="mt-gen-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="mt-icon"
                    fill="none"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  />
                </span>
                <span
                  class="mt-gen-label"
                >
                  <span
                    class="mt-vh"
                  >
                    في الانتظار:
                     
                  </span>
                  التحقق من كل إجابة
                </span>
              </li>
              <li
                data-status="waiting"
              >
                <span
                  class="mt-gen-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="mt-icon"
                    fill="none"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  />
                </span>
                <span
                  class="mt-gen-label"
                >
                  <span
                    class="mt-vh"
                  >
                    في الانتظار:
                     
                  </span>
                  التحقق من سهولة القراءة للصف 3
                </span>
              </li>
              <li
                data-status="waiting"
              >
                <span
                  class="mt-gen-icon"
                >
                  <svg
                    aria-hidden="true"
                    class="mt-icon"
                    fill="none"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  />
                </span>
                <span
                  class="mt-gen-label"
                >
                  <span
                    class="mt-vh"
                  >
                    في الانتظار:
                     
                  </span>
                  المسألة جاهزة
                </span>
              </li>
            </ol>
          </div>
          <div
            aria-live="polite"
            class="mt-news"
          />
        </div>
      </div>
    </article>
    <div
      class="mt-foot"
    >
      <div
        class="mt-field"
        data-disabled="true"
      >
        <label
          class="mt-vh"
          for="P0-1"
        >
          سؤال عن المسألة
        </label>
        <input
          disabled=""
          id="P0-1"
          placeholder="سؤالك عن المسألة…"
          type="text"
        />
        <button
          aria-label="إرسال"
          class="mt-icon-btn"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="mt-icon mt-send"
            fill="none"
            height="18"
            viewBox="0 0 16 16"
            width="18"
          />
        </button>
      </div>
      <div
        class="mt-btns"
      >
        <button
          class="mt-btn"
          disabled=""
          type="button"
        >
          لا أعرف
        </button>
        <button
          class="mt-btn"
          disabled=""
          type="button"
        >
          تلميح
        </button>
        <button
          class="mt-btn"
          disabled=""
          type="button"
        >
          مسألة أخرى
        </button>
      </div>
    </div>
  </div>
</div>
`;
